[gd_scene load_steps=6 format=2]

[ext_resource path="res://source/scenes/dice/base_dice.gd" type="Script" id=1]
[ext_resource path="res://assets/_prototype/prototype_dice_base.png" type="Texture" id=2]
[ext_resource path="res://assets/_prototype/prototype_dice_faces.png" type="Texture" id=3]
[ext_resource path="res://assets/_prototype/prototype_launch_bar_base.png" type="Texture" id=4]
[ext_resource path="res://assets/_prototype/prototype_launch_bar_fill.png" type="Texture" id=5]

[node name="base_dice" type="RigidBody2D"]
collision_layer = 0
collision_mask = 128
mass = 10.0
script = ExtResource( 1 )
base_sprite = NodePath("base_sprite")
face_sprite = NodePath("face_sprite")

[node name="base_sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="face_sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 7

[node name="collision_polygon" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -32, -48, 32, -48, 44, -44, 48, -32, 48, 32, 44, 44, 32, 48, -32, 48, -44, 44, -48, 32, -48, -32, -44, -44 )

[node name="launch_bar" type="TextureProgress" parent="."]
margin_left = 100.0
margin_top = -12.0
margin_right = 64.0
rect_pivot_offset = Vector2( -100, 12 )
mouse_filter = 2
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
